fix(client): fix #164 remove dark mode scheme

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -714,50 +714,3 @@
 	font-size: 12px;
 	color: #1abc9c;
 }
-
-@media (prefers-color-scheme:dark) {
-	.v[data-class=v] .status-bar,
-	.v[data-class=v] .veditor,
-	.v[data-class=v] .vinput,
-	.v[data-class=v] p,
-	.v[data-class=v] pre code {
-		color: #b2b2b5
-	}
-	.v[data-class=v] .vsys,
-	.v[data-class=v] .vtime {
-		color: #929298
-	}
-	.v[data-class=v] code,
-	.v[data-class=v] pre,
-	.v[data-class=v] pre code {
-		color: #929298;
-		background-color: #151414
-	}
-	.v[data-class=v] .vwrap {
-		border-color: #b2b2b5
-	}
-	.v[data-class=v] .vicon {
-		fill: #b2b2b5
-	}
-	.v[data-class=v] .vicon.actived {
-		fill: #66b1ff
-	}
-	.v[data-class=v] .vbtn {
-		color: #b2b2b5;
-		border-color: #b2b2b5
-	}
-	.v[data-class=v] .vbtn:hover {
-		color: #66b1ff;
-		border-color: #66b1ff
-	}
-	.v[data-class=v] a:hover {
-		color: #d7191a
-	}
-	.v[data-class=v] .vcards .vcard .vcontent.expand:before {
-		background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, .3)), to(rgba(0, 0, 0, .7)));
-		background: linear-gradient(180deg, rgba(0, 0, 0, .3), rgba(0, 0, 0, .7))
-	}
-	.v[data-class=v] .vcards .vcard .vcontent.expand:after {
-		background: rgba(0, 0, 0, .7)
-	}
-}
